--- a/blog/blog-frontend/src/components/common/Footer/Footer.scss
+++ b/blog/blog-frontend/src/components/common/Footer/Footer.scss
@@ -1,1 +1,31 @@
-/* your css code */
+@import '../../../styles/utils.scss';
+
+.footer {
+  background: $oc-gray-7;
+  height: 10rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  .brand {
+    //로고
+    color: white;
+    font-size: 2rem;
+    font-weight: 600;
+  }
+
+  .admin-login {
+    // 로그인 버튼
+    margin-top: 0.5rem;
+    font-weight: 600;
+    font-size: 0.8rem;
+    color: rgba(255, 255, 255, 0.8);
+    cursor: pointer;
+    &:hover {
+      color: white;
+    }
+  }
+}
+
